# alegrosz

./: .gitignore  .pre-commit-config.yaml  README.MD  README.rst  conftest.py  docker-compose.yaml  pyproject.toml
.env/: .env_db-default
backend/: .gitignore  Dockerfile  Pipfile
backend/.envs/: .envs-default
backend/config/: settings.py  urls.py
backend/products/: admin.py  models.py  serializers.py  urls.py  viewsets.py
backend/products/migrations/: 0001_initial.py  0002_product_stock_count_alter_product_description.py
comments/: admin.py  models.py  serializers.py  urls.py  validators.py  viewsets.py
comments/migrations/: 0001_initial.py
comments/tests/: test_models.py  test_serializers.py  test_validators.py
config/: settings.py  urls.py
docs/: code_style.rst  conf.py  index.rst  modules.rst
fixtures/: example_data.json
frontend/src/: App.js
products/: admin.py  filters.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
products/migrations/: 0001_initial.py  0002_category_and_subcategory_models.py
products/tests/: test_category_model.py  test_product_model.py  test_serializers.py  test_subcategory_model.py  test_viewsets.py
users/: urls.py
users/migrations/: 0001_initial.py
webserver/: default.conf
