[tool.poetry]
name = "alegrosz"
version = "0.1.0"
description = ""
authors = ["Bartosz Baran <bartosz.baran192@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.7"
djangorestframework = "3.14.0"
pytest = "7.2.2"
pytest-django = "4.5.2"
mypy = "1.1.1"
black = "23.1.0"
flake8 = "6.0.0"
Sphinx = "6.1.3"
django-stubs = "1.15.0"
djangorestframework-stubs = "1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
